更新和解决BUG

--- a/src/main/webapp/static/mobile/html/purchaseMagmetHtml/check.html
+++ b/src/main/webapp/static/mobile/html/purchaseMagmetHtml/check.html
@@ -121,7 +121,7 @@
 					        <input type="text" class="mui-input-clear" disabled>
 					    </div>
 					    <div class="mui-input-row">
-					        <label>工厂价：</label>
+					        <label>结算价：</label>
 					        <input type="text" class="mui-input-clear" disabled>
 					    </div>
 				    </div>
