--- a/src/main/webapp/static/mobile/html/purchaseMagmetHtml/startCheck.html
+++ b/src/main/webapp/static/mobile/html/purchaseMagmetHtml/startCheck.html
@@ -141,7 +141,7 @@
 					        <input type="text" class="mui-input-clear">
 					    </div>
 					    <div class="mui-input-row">
-					        <label>工厂价：</label>
+					        <label>结算价：</label>
 					        <input type="text" class="mui-input-clear">
 					    </div>
 				    </div>
