--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/relevanceHtml/relAdd.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/relevanceHtml/relAdd.html
@@ -102,6 +102,7 @@
 					<input class="savedata" type="hidden" value=''>
 					<div style="clear:both"></div>
 				</div>
+				<font>*</font>
 			</div>
 			<div class="mui-input-row">
 				<label>客户专员：</label>
@@ -112,6 +113,12 @@
 					<input class="savedata" type="hidden" value=''>
 					<div style="clear:both"></div>
 				</div>
+				<font>*</font>
+			</div>
+			<div class="mui-input-row">
+				<label>手机号：</label>
+				<input type="text" class="mui-input-clear" id="phoneNum" placeholder="请输入手机号码">
+				<font>*</font>
 			</div>
 		</div>
 		<div class="saveBtn">
