--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/relevanceHtml/relList.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/relevanceHtml/relList.html
@@ -48,6 +48,10 @@
 		    <p class="app_cf app_nav_text_center">经销店列表</p>
 		</header>
 		<nav class="mui-bar mui-bar-tab footClass" id="nav">
+			<a class="mui-tab-item app_cf staRelStaBtn">
+				<span class="mui-icon mui-icon-undo"></span>
+				<span class="mui-tab-label">客户专员列表</span>
+			</a>
 			<a class="mui-tab-item app_cf staRelAddBtn">
 				<span class="mui-icon mui-icon-plus"></span>
 				<span class="mui-tab-label">经销店添加</span>
