--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/staffAmend.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/staffAmend.html
@@ -72,6 +72,29 @@
 				top: 38%;
 				font-size: 20px;
 			}
+			.mui-table-view-cell {
+				list-style: none;
+				font-size: 10px;
+				padding: 6px 12px;
+			}
+			
+			.mui-checkbox.mui-left label,
+			.mui-radio.mui-left label {
+				padding: 0;
+				width: 75%;
+				position: relative;
+				left: 25px;
+			}
+			
+			.mui-checkbox.mui-left input[type=checkbox] {
+				top: -1px;
+				left: 0;
+			}
+			
+			.mui-checkbox input[type=checkbox]:before,
+			.mui-radio input[type=radio]:before {
+				font-size: 20px;
+			}
 		</style>
 	</head>
 	<body>
@@ -167,9 +190,423 @@
 				</div>
 			</div>
 			<div class="mui-input-row">
-				<label>用户角色：</label>
-				<input type="text" class="mui-input-clear" id="inPoLastDa">
-				<font>*</font>
+				<div class="labelLf">用户角色：</div>
+				<div class="mui-row">
+			        <div class="mui-col-sm-4 mui-col-xs-4">
+			            <li class="mui-table-view-cell">
+			                <div class="mui-checkbox mui-left">
+								<label>test采销部</label>
+								<input name="checkbox1" value="55" type="checkbox">
+							</div>
+			            </li>
+			        </div>
+			        <div class="mui-col-sm-4 mui-col-xs-4">
+			            <li class="mui-table-view-cell">
+			                <div class="mui-checkbox mui-left">
+								<label>人力主管</label>
+								<input name="checkbox1" value="38" type="checkbox">
+							</div>
+			            </li>
+			        </div>
+			        <div class="mui-col-sm-4 mui-col-xs-4">
+			            <li class="mui-table-view-cell">
+			                <div class="mui-checkbox mui-left">
+								<label>仓储专员</label>
+								<input name="checkbox1" value="21" type="checkbox">
+							</div>
+			            </li>
+			        </div>
+			    </div>
+			    <div class="mui-row">
+			        <div class="mui-col-sm-4 mui-col-xs-4">
+			            <li class="mui-table-view-cell">
+			                <div class="mui-checkbox mui-left">
+								<label>仓储运营专员</label>
+								<input name="checkbox1" value="33" type="checkbox">
+							</div>
+			            </li>
+			        </div>
+			        <div class="mui-col-sm-4 mui-col-xs-4">
+			            <li class="mui-table-view-cell">
+			                <div class="mui-checkbox mui-left">
+								<label>会计</label>
+								<input name="checkbox1" value="36" type="checkbox">
+							</div>
+			            </li>
+			        </div>
+			        <div class="mui-col-sm-4 mui-col-xs-4">
+			            <li class="mui-table-view-cell">
+			                <div class="mui-checkbox mui-left">
+								<label>供应商</label>
+								<input name="checkbox1" value="29" type="checkbox">
+							</div>
+			            </li>
+			        </div>
+			    </div>
+			    <div class="mui-row">
+			        <div class="mui-col-sm-4 mui-col-xs-4">
+			            <li class="mui-table-view-cell">
+			                <div class="mui-checkbox mui-left">
+								<label>供应链金融专员</label>
+								<input name="checkbox1" value="35" type="checkbox">
+							</div>
+			            </li>
+			        </div>
+			        <div class="mui-col-sm-4 mui-col-xs-4">
+			            <li class="mui-table-view-cell">
+			                <div class="mui-checkbox mui-left">
+								<label>供货中心经理</label>
+								<input name="checkbox1" value="12" type="checkbox">
+							</div>
+			            </li>
+			        </div>
+			        <div class="mui-col-sm-4 mui-col-xs-4">
+			            <li class="mui-table-view-cell">
+			                <div class="mui-checkbox mui-left">
+								<label>公司管理员</label>
+								<input name="checkbox1" value="2" type="checkbox">
+							</div>
+			            </li>
+			        </div>
+			    </div>
+			    <div class="mui-row">
+			        <div class="mui-col-sm-4 mui-col-xs-4">
+			            <li class="mui-table-view-cell">
+			                <div class="mui-checkbox mui-left">
+								<label>出纳</label>
+								<input name="checkbox1" value="37" type="checkbox">
+							</div>
+			            </li>
+			        </div>
+			        <div class="mui-col-sm-4 mui-col-xs-4">
+			            <li class="mui-table-view-cell">
+			                <div class="mui-checkbox mui-left">
+								<label>厂商专员</label>
+								<input name="checkbox1" value="25" type="checkbox">
+							</div>
+			            </li>
+			        </div>
+			        <div class="mui-col-sm-4 mui-col-xs-4">
+			            <li class="mui-table-view-cell">
+			                <div class="mui-checkbox mui-left">
+								<label>发货专员</label>
+								<input name="checkbox1" value="23" type="checkbox">
+							</div>
+			            </li>
+			        </div>
+			    </div>
+			    <div class="mui-row">
+			        <div class="mui-col-sm-4 mui-col-xs-4">
+			            <li class="mui-table-view-cell">
+			                <div class="mui-checkbox mui-left">
+								<label>只读</label>
+								<input name="checkbox1" value="51" type="checkbox">
+							</div>
+			            </li>
+			        </div>
+			        <div class="mui-col-sm-4 mui-col-xs-4">
+			            <li class="mui-table-view-cell">
+			                <div class="mui-checkbox mui-left">
+								<label>品类阶梯价主管</label>
+								<input name="checkbox1" value="53" type="checkbox">
+							</div>
+			            </li>
+			        </div>
+			        <div class="mui-col-sm-4 mui-col-xs-4">
+			            <li class="mui-table-view-cell">
+			                <div class="mui-checkbox mui-left">
+								<label>商务拓展专员</label>
+								<input name="checkbox1" value="34" type="checkbox">
+							</div>
+			            </li>
+			        </div>
+			    </div>
+			    <div class="mui-row">
+			        <div class="mui-col-sm-4 mui-col-xs-4">
+			            <li class="mui-table-view-cell">
+			                <div class="mui-checkbox mui-left">
+								<label>培训专员</label>
+								<input name="checkbox1" value="19" type="checkbox">
+							</div>
+			            </li>
+			        </div>
+			        <div class="mui-col-sm-4 mui-col-xs-4">
+			            <li class="mui-table-view-cell">
+			                <div class="mui-checkbox mui-left">
+								<label>备货专员</label>
+								<input name="checkbox1" value="27" type="checkbox">
+							</div>
+			            </li>
+			        </div>
+			        <div class="mui-col-sm-4 mui-col-xs-4">
+			            <li class="mui-table-view-cell">
+			                <div class="mui-checkbox mui-left">
+								<label>市场专员</label>
+								<input name="checkbox1" value="17" type="checkbox">
+							</div>
+			            </li>
+			        </div>
+			    </div>
+			    <div class="mui-row">
+			        <div class="mui-col-sm-4 mui-col-xs-4">
+			            <li class="mui-table-view-cell">
+			                <div class="mui-checkbox mui-left">
+								<label>微店用户</label>
+								<input name="checkbox1" value="48" type="checkbox">
+							</div>
+			            </li>
+			        </div>
+			        <div class="mui-col-sm-4 mui-col-xs-4">
+			            <li class="mui-table-view-cell">
+			                <div class="mui-checkbox mui-left">
+								<label>总经理</label>
+								<input name="checkbox1" value="47" type="checkbox">
+							</div>
+			            </li>
+			        </div>
+			        <div class="mui-col-sm-4 mui-col-xs-4">
+			            <li class="mui-table-view-cell">
+			                <div class="mui-checkbox mui-left">
+								<label>招商专员</label>
+								<input name="checkbox1" value="18" type="checkbox">
+							</div>
+			            </li>
+			        </div>
+			    </div>
+			    <div class="mui-row">
+			        <div class="mui-col-sm-4 mui-col-xs-4">
+			            <li class="mui-table-view-cell">
+			                <div class="mui-checkbox mui-left">
+								<label>提付款专员</label>
+								<input name="checkbox1" value="56" type="checkbox">
+							</div>
+			            </li>
+			        </div>
+			        <div class="mui-col-sm-4 mui-col-xs-4">
+			            <li class="mui-table-view-cell">
+			                <div class="mui-checkbox mui-left">
+								<label>本公司管理员</label>
+								<input name="checkbox1" value="3" type="checkbox">
+							</div>
+			            </li>
+			        </div>
+			        <div class="mui-col-sm-4 mui-col-xs-4">
+			            <li class="mui-table-view-cell">
+			                <div class="mui-checkbox mui-left">
+								<label>法务主管</label>
+								<input name="checkbox1" value="40" type="checkbox">
+							</div>
+			            </li>
+			        </div>
+			    </div>
+			    <div class="mui-row">
+			        <div class="mui-col-sm-4 mui-col-xs-4">
+			            <li class="mui-table-view-cell">
+			                <div class="mui-checkbox mui-left">
+								<label>渠道助理</label>
+								<input name="checkbox1" value="41" type="checkbox">
+							</div>
+			            </li>
+			        </div>
+			        <div class="mui-col-sm-4 mui-col-xs-4">
+			            <li class="mui-table-view-cell">
+			                <div class="mui-checkbox mui-left">
+								<label>渠道经理</label>
+								<input name="checkbox1" value="20" type="checkbox">
+							</div>
+			            </li>
+			        </div>
+			        <div class="mui-col-sm-4 mui-col-xs-4">
+			            <li class="mui-table-view-cell">
+			                <div class="mui-checkbox mui-left">
+								<label>物流专员</label>
+								<input name="checkbox1" value="32" type="checkbox">
+							</div>
+			            </li>
+			        </div>
+			    </div>
+			    <div class="mui-row">
+			        <div class="mui-col-sm-4 mui-col-xs-4">
+			            <li class="mui-table-view-cell">
+			                <div class="mui-checkbox mui-left">
+								<label>生产专员</label>
+								<input name="checkbox1" value="22" type="checkbox">
+							</div>
+			            </li>
+			        </div>
+			        <div class="mui-col-sm-4 mui-col-xs-4">
+			            <li class="mui-table-view-cell">
+			                <div class="mui-checkbox mui-left">
+								<label>盘点专员</label>
+								<input name="checkbox1" value="44" type="checkbox">
+							</div>
+			            </li>
+			        </div>
+			        <div class="mui-col-sm-4 mui-col-xs-4">
+			            <li class="mui-table-view-cell">
+			                <div class="mui-checkbox mui-left">
+								<label>系统演示</label>
+								<input name="checkbox1" value="8" type="checkbox">
+							</div>
+			            </li>
+			        </div>
+			    </div>
+			    <div class="mui-row">
+			        <div class="mui-col-sm-4 mui-col-xs-4">
+			            <li class="mui-table-view-cell">
+			            	<div class="mui-checkbox mui-left">
+								<label>系统管理员</label>
+								<input name="checkbox1" value="1" type="checkbox">
+							</div>
+			            </li>
+			        </div>
+			        <div class="mui-col-sm-4 mui-col-xs-4">
+			            <li class="mui-table-view-cell">
+			            	<div class="mui-checkbox mui-left">
+								<label>统计图专员</label>
+								<input name="checkbox1" value="46" type="checkbox">
+							</div>
+			            </li>
+			        </div>
+			        <div class="mui-col-sm-4 mui-col-xs-4">
+			            <li class="mui-table-view-cell">
+			                <div class="mui-checkbox mui-left">
+								<label>营销总监</label>
+								<input name="checkbox1" value="28" type="checkbox">
+							</div>
+			            </li>
+			        </div>
+			    </div>
+			    <div class="mui-row">
+			        <div class="mui-col-sm-4 mui-col-xs-4">
+			            <li class="mui-table-view-cell">
+			            	<div class="mui-checkbox mui-left">
+								<label>行政主管</label>
+								<input name="checkbox1" value="39" type="checkbox">
+							</div>
+			            </li>
+			        </div>
+			        <div class="mui-col-sm-4 mui-col-xs-4">
+			            <li class="mui-table-view-cell">
+			            	<div class="mui-checkbox mui-left">
+								<label>财务总监</label>
+								<input name="checkbox1" value="54" type="checkbox">
+							</div>
+			            </li>
+			        </div>
+			        <div class="mui-col-sm-4 mui-col-xs-4">
+			            <li class="mui-table-view-cell">
+			                <div class="mui-checkbox mui-left">
+								<label>财务经理</label>
+								<input name="checkbox1" value="30" type="checkbox">
+							</div>
+			            </li>
+			        </div>
+			    </div>
+			    <div class="mui-row">
+			        <div class="mui-col-sm-4 mui-col-xs-4">
+			            <li class="mui-table-view-cell">
+			            	<div class="mui-checkbox mui-left">
+								<label>货架管理专员</label>
+								<input name="checkbox1" value="45" type="checkbox">
+							</div>
+			            </li>
+			        </div>
+			        <div class="mui-col-sm-4 mui-col-xs-4">
+			            <li class="mui-table-view-cell">
+			            	<div class="mui-checkbox mui-left">
+								<label>超级采购专员</label>
+								<input name="checkbox1" value="42" type="checkbox">
+							</div>
+			            </li>
+			        </div>
+			        <div class="mui-col-sm-4 mui-col-xs-4">
+			            <li class="mui-table-view-cell">
+			                <div class="mui-checkbox mui-left">
+								<label>运营总监</label>
+								<input name="checkbox1" value="11" type="checkbox">
+							</div>
+			            </li>
+			        </div>
+			    </div>
+			    <div class="mui-row">
+			        <div class="mui-col-sm-4 mui-col-xs-4">
+			            <li class="mui-table-view-cell">
+			            	<div class="mui-checkbox mui-left">
+								<label>采购专员</label>
+								<input name="checkbox1" value="10" type="checkbox">
+							</div>
+			            </li>
+			        </div>
+			        <div class="mui-col-sm-4 mui-col-xs-4">
+			            <li class="mui-table-view-cell">
+			            	<div class="mui-checkbox mui-left">
+								<label>采购中心经理</label>
+								<input name="checkbox1" value="13" type="checkbox">
+							</div>
+			            </li>
+			        </div>
+			        <div class="mui-col-sm-4 mui-col-xs-4">
+			            <li class="mui-table-view-cell">
+			                <div class="mui-checkbox mui-left">
+								<label>采销经理</label>
+								<input name="checkbox1" value="24" type="checkbox">
+							</div>
+			            </li>
+			        </div>
+			    </div>
+			    <div class="mui-row">
+			        <div class="mui-col-sm-4 mui-col-xs-4">
+			            <li class="mui-table-view-cell">
+			            	<div class="mui-checkbox mui-left">
+								<label>验货员</label>
+								<input name="checkbox1" value="57" type="checkbox">
+							</div>
+			            </li>
+			        </div>
+			        <div class="mui-col-sm-4 mui-col-xs-4">
+			            <li class="mui-table-view-cell">
+			            	<div class="mui-checkbox mui-left">
+								<label>普通用户</label>
+								<input name="checkbox1" value="6" type="checkbox">
+							</div>
+			            </li>
+			        </div>
+			        <div class="mui-col-sm-4 mui-col-xs-4">
+			            <li class="mui-table-view-cell">
+			                <div class="mui-checkbox mui-left">
+								<label>本部门管理员</label>
+								<input name="checkbox1" value="5" type="checkbox">
+							</div>
+			            </li>
+			        </div>
+			    </div>
+			    <div class="mui-row">
+			        <div class="mui-col-sm-4 mui-col-xs-4">
+			            <li class="mui-table-view-cell">
+			            	<div class="mui-checkbox mui-left">
+								<label>部门管理员</label>
+								<input name="checkbox1" value="4" type="checkbox">
+							</div>
+			            </li>
+			        </div>
+			        <div class="mui-col-sm-4 mui-col-xs-4">
+			            <li class="mui-table-view-cell">
+			            	<div class="mui-checkbox mui-left">
+								<label>济南市管理员</label>
+								<input name="checkbox1" value="7" type="checkbox">
+							</div>
+			            </li>
+			        </div>
+			        <div class="mui-col-sm-4 mui-col-xs-4">
+			            <li class="mui-table-view-cell">
+			                <div class="mui-checkbox mui-left">
+								<label>采购商</label>
+								<input name="checkbox1" value="9" type="checkbox">
+							</div>
+			            </li>
+			        </div>
+			    </div>
 			</div>
 			<div class="mui-input-row">
 				<label>备注：</label>
