--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/staSearch.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/staSearch.html
@@ -71,7 +71,7 @@
 			<p class="app_cf app_nav_text_center">客户专员查询</p>
 		</header>
 		<div class="mui-content menuMarg">
-			<form class="mui-input-group app_bline">
+			<form class="mui-input-group">
 				<div class="mui-input-row">
 					<label>归属公司：</label>
 					<div class="pre">
