--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/staffList.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/staffList.html
@@ -27,7 +27,16 @@
  			.listBlue>div {border-bottom: 1px solid #40ABE9;}
  			.mui-input-group div.mui-input-row {background-color:#fff;}
  			.noneTxt {position: absolute;top: 50%;left: 50%;margin-left: -28px;}
- 			.footClass {background-color: #40ABE9;}    
+ 			.footClass {background-color: #40ABE9;} 
+ 			#refreshContainer{
+				touch-action: none;
+			}  
+			.mui-table-view-chevron .mui-table-view-cell {
+			     padding-right: 0px; 
+			}
+			.listBlue>div {
+			     border-bottom: 1px solid #fff; 
+			}   
 		</style>
 	</head>
 	<body>
