--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrderList.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrderList.html
@@ -47,6 +47,12 @@
 		    <span id="staOrdSechBtn" class="mui-icon mui-icon-search mui-pull-right app_cf"></span>
 		    <p class="app_cf app_nav_text_center">订单列表</p>
 		</header>
+		<nav class="mui-bar mui-bar-tab footClass" id="nav">
+			<a class="mui-tab-item app_cf staOrdStaBtn">
+				<span class="mui-icon mui-icon-undo"></span>
+				<span class="mui-tab-label">客户专员列表</span>
+			</a>
+		</nav>
 		<div class="content mui-content">
 			<div class="staOrdList listBlue">
 				
