--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrderList.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrderList.html
@@ -53,9 +53,11 @@
 				<span class="mui-tab-label">客户专员列表</span>
 			</a>
 		</nav>
-		<div class="content mui-content">
-			<div class="staOrdList listBlue">
-				
+		<div class="content mui-content mui-scroll-wrapper" id="refreshContainer">
+			<div class="listBlue mui-scroll">
+				<ul class="mui-table-view mui-table-view-chevron" id="staOrdList">
+                        
+                </ul>
 			</div>
 		</div>
 		<script src="../../../js/component/mui.min.js"></script>	
