--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/relevanceHtml/relList.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/relevanceHtml/relList.html
@@ -57,9 +57,11 @@
 				<span class="mui-tab-label">经销店添加</span>
 			</a>
 		</nav>
-		<div class="content mui-content">
-			<div class="staReleList listBlue">
-				
+		<div class="content mui-content mui-scroll-wrapper" id="refreshContainer">
+			<div class="listBlue mui-scroll">
+				<ul class="mui-table-view mui-table-view-chevron" id="staReleList">
+                        
+                </ul>
 			</div>
 		</div>
 		<script src="../../../js/component/mui.min.js"></script>	
