--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/staSearch.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/staSearch.html
@@ -54,7 +54,7 @@
 			}
 			.mui-input-row input.newinput {padding-left: 0;}
 			.secStyle {margin: 5px 0;}
-			.staHideSpan {
+			#cpySchHideSpan {
 			    position: absolute;
 			    right: 52px;
 			    top: 11px;
@@ -76,7 +76,7 @@
 					<label>归属公司：</label>
 					<div class="pre">
 						<input class="newinput" type="text" placeholder="请选择归属公司">
-						<span class="mui-icon mui-icon-closeempty staHideSpan" id="cpySchHideSpan"></span>
+						<span class="mui-icon mui-icon-closeempty" id="cpySchHideSpan"></span>
 						<div class="input_div" style="display: none;">
 							
 						</div>
@@ -84,7 +84,7 @@
 						<div style="clear:both"></div>
 					</div>
 				</div>
-				<div class="mui-input-row">
+				<!--<div class="mui-input-row">
 					<label>归属部门：</label>
 					<div class="pre">
 						<input class="newinput" type="text" placeholder="请选择归属部门">
@@ -95,7 +95,7 @@
 						<input class="savedata" type="hidden" value=''>
 						<div style="clear:both"></div>
 					</div>
-				</div>
+				</div>-->
 				<div class="mui-input-row">
 					<label>登录名：</label>
 					<input type="text" class="inReqNum" placeholder="请输入登录名">
