--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/staffList.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/staffList.html
@@ -55,8 +55,8 @@
 			</a>
 		</nav>
 		<div class="content mui-content mui-scroll-wrapper" id="refreshContainer">
-			<div class="staffList listBlue mui-scroll">
-				<ul class="mui-table-view mui-table-view-chevron" id="list">
+			<div class="listBlue mui-scroll">
+				<ul class="mui-table-view mui-table-view-chevron" id="staffList">
                         
                 </ul>
 			</div>
