--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/relevanceHtml/relList.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/relevanceHtml/relList.html
@@ -39,6 +39,9 @@
  			.mui-input-group div.mui-input-row {background-color:#fff;}
  			.noneTxt {position: absolute;top: 50%;left: 50%;margin-left: -28px;}
  			.footClass {background-color: #40ABE9;}
+ 			#refreshContainer{
+				touch-action: none;
+			}
 		</style>
 	</head>
 	<body>
