--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAddList.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAddList.html
@@ -13,7 +13,9 @@
 				float: right;
 				width: 67%;
 			}
-			
+			.mui-action-back{
+				touch-action: none;
+			}
 			.newinput {
 				width: 150px;
 				padding: 2px 0px 2px 0px;
