--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrderList.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrderList.html
@@ -39,6 +39,13 @@
  			.mui-input-group div.mui-input-row {background-color:#fff;}
  			.noneTxt {position: absolute;top: 50%;left: 50%;margin-left: -28px;}
  			.footClass {background-color: #40ABE9;}
+ 			.mui-table-view-chevron .mui-table-view-cell {padding-right: 0px;}
+ 			#refreshContainer{
+				touch-action: none;
+			}
+			.listBlue>div {
+			     border-bottom: 1px solid #fff; 
+			}
 		</style>
 	</head>
 	<body>
