--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/staSearch.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/staSearch.html
@@ -14,11 +14,6 @@
 				width: 67%;
 			}
 			
-			.inSearchBtnClass {
-				margin: 60px auto;
-				width: 80%;
-			}
-			
 			.newinput {
 				width: 150px;
 				padding: 2px 0px 2px 0px;
@@ -98,20 +93,20 @@
 				</div>-->
 				<div class="mui-input-row">
 					<label>登录名：</label>
-					<input type="text" class="inReqNum" placeholder="请输入登录名">
+					<input type="text" class="staLogName" placeholder="请输入登录名">
 				</div>
 				<div class="mui-input-row">
 					<label>姓名：</label>
-					<input type="text" class="inReqNum" placeholder="请输入姓名">
+					<input type="text" class="staName" placeholder="请输入姓名">
 				</div>
 				<div class="mui-input-row">
 					<label>手机：</label>
-					<input type="text" class="inReqNum" placeholder="请输入手机号">
+					<input type="text" class="staMobile" placeholder="请输入手机号">
 				</div>
 			</form>
 		</div>
-		<div class="inSearchBtnClass">
-			<button id="inSearchBtn" type="submit" class="app_btn_search mui-btn-blue mui-btn-block">查询</button>
+		<div class="SearchBtnClass">
+			<button id="staffSearchBtn" type="submit" class="app_btn_search mui-btn-blue mui-btn-block">查询</button>
 		</div>
 		<script src="../../js/component/zepto.min.js"></script>
 		<script src="../../js/component/mui.min.js"></script>
