--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrdSech.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrdSech.html
@@ -70,7 +70,7 @@
 			<p class="app_cf app_nav_text_center">订单信息查询</p>
 		</header>
 		<div class="mui-content menuMarg">
-			<form class="mui-input-group app_bline">
+			<form class="mui-input-group">
 				<div class="mui-input-row">
 					<label>订单编号：</label>
 					<input type="text" class="inReqNum" placeholder="请输入订单编号">
