--- a/src/main/webapp/static/mobile/html/purchaseMagmetHtml/puSearch.html
+++ b/src/main/webapp/static/mobile/html/purchaseMagmetHtml/puSearch.html
@@ -11,83 +11,6 @@
 		<link href="../../css/mui.min.css" rel="stylesheet" />
 		<link href="../../css/app.css" rel="stylesheet" />
 		<link href="../../css/drop.css" rel="stylesheet" />
-		<style>
-			.pre {
-				margin-bottom: 0;
-				padding-left: 0;
-				float: right;
-				width: 67%;
-			}
-			
-			#select {
-				top: 6px;
-				height: 50px;
-				width: 100%;
-			}
-			
-			.selectStyle {
-				margin: 0;
-			}
-			
-			.puSearchBtn {
-				margin: 60px auto;
-				width: 80%;
-			}
-			
-			.suppChoice {
-				padding: 5px;
-			}
-			
-			#inputselect {
-				width: 80%;
-				height: 50px;
-				position: relative;
-				top: -50px;
-				padding: 0;
-			}
-			
-			.newinput {
-				width: 150px;
-				padding: 2px 0px 2px 0px;
-				margin-bottom: -1px;
-				background: url(./thumb.jpg) no-repeat scroll right center;
-				border: 1px solid #ccc;
-				box-shadow: 0 1px 0 0 #eee inset;
-				cursor: default;
-			}
-			
-			.newinput:focus {
-				cursor: text;
-			}
-			
-			.input_div {
-				width: 150px;
-				border: 1px solid #ddd;
-				border-bottom: none;
-				border-radius: 0 0 3px 3px;
-				display: none;
-			}
-			
-			.soption {
-				display: block;
-				padding: 2px 5px;
-			}
-			
-			.soption:hover {
-				background: #f9f9f9;
-				border-top: 1px dotted #ddd;
-				border-bottom: 1px dotted #ddd;
-				padding: 1px 5px;
-			}
-			.mui-input-row input.newinput {padding-left: 0;}
-			.secStyle {margin: 5px 0;}
-			#hideSpan {position: absolute;
-			    right: 52px;
-			    top: 11px;
-			    border: 1px solid rgb(204, 204, 204);
-			    border-radius: 13px;
-				display: none;}
-		</style>
 	</head>
 
 	<body>
@@ -108,8 +31,8 @@
 				<div class="mui-input-row">
 					<label>供应商：</label>
 					<div class="pre">
-						<input class="newinput" type="text" placeholder="关键字">
-						<span class="mui-icon mui-icon-closeempty" id="hideSpan"></span>
+						<input class="newinput" type="text" placeholder="请选择供应商">
+						<span class="mui-icon mui-icon-closeempty hideSpan" id="hideSpan"></span>
 						<div class="input_div" style="display: none;">
 							
 						</div>
@@ -129,7 +52,7 @@
 				</div>
 			</form>
 		</div>
-		<div class="puSearchBtn">
+		<div class="SearchBtnClass">
 			<button id="puSearchBtn" type="submit" class="app_btn_search mui-btn-blue mui-btn-block">查询</button>
 		</div>
 		<script src="../../js/component/zepto.min.js"></script>
