--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAmend.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAmend.html
@@ -158,10 +158,10 @@
 			bottom: 10% !important;			
 }
 			*/
-.mui-toast-message {
+/*.mui-toast-message {
 	background: #FF7F24;
 	color: #000;
-}
+}*/
 		</style>
 	</head>
 
