--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/relevanceHtml/relList.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/relevanceHtml/relList.html
@@ -42,6 +42,7 @@
  			#refreshContainer{
 				touch-action: none;
 			}
+			.mui-ios .mui-table-view-cell {padding: 0;}
 		</style>
 	</head>
 	<body>
