--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrderList.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrderList.html
@@ -40,7 +40,7 @@
  			.noneTxt {position: absolute;top: 50%;left: 50%;margin-left: -28px;}
  			.footClass {background-color: #40ABE9;}
  			.mui-table-view-chevron .mui-table-view-cell {padding-right: 0px;}
- 			#refreshContainer{
+ 			#refreshContainer,#nav{
 				touch-action: none;
 			}
 			.listBlue>div {
