--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/staSearch.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/staSearch.html
@@ -40,15 +40,15 @@
 				</div>-->
 				<div class="mui-input-row">
 					<label>登录名：</label>
-					<input type="text" class="staLogName" placeholder="请输入登录名">
+					<input type="text" class="staLogName mui-input-clear" placeholder="请输入登录名">
 				</div>
 				<div class="mui-input-row">
 					<label>姓名：</label>
-					<input type="text" class="staName" placeholder="请输入姓名">
+					<input type="text" class="staName mui-input-clear" placeholder="请输入姓名">
 				</div>
 				<div class="mui-input-row">
 					<label>手机：</label>
-					<input type="text" class="staMobile" placeholder="请输入手机号">
+					<input type="text" class="staMobile mui-input-clear" placeholder="请输入手机号">
 				</div>
 			</form>
 		</div>
