--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrdDetail.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrdDetail.html
@@ -88,7 +88,7 @@
 			</div>
 			<div class="mui-input-row">
 				<label>应付金额：</label>
-				<input type="text" class="mui-input-clear" id="staShouldPay" disabled>
+				<input type="text" class="mui-input-clear" id="staShouldPay" disabled pattern="0.00">
 			</div>
 			<div class="mui-input-row">
 				<label>已付金额：</label>
