--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrdSech.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrdSech.html
@@ -16,23 +16,23 @@
 			<form class="mui-input-group">
 				<div class="mui-input-row">
 					<label>订单编号：</label>
-					<input type="text" class="inReqNum" placeholder="请输入订单编号">
+					<input type="text" class="inReqNum mui-input-clear" placeholder="请输入订单编号">
 				</div>
 				<div class="mui-input-row">
 					<label>采购中心：</label>
-					<input type="text" class="inReqNum" placeholder="请输入采购中心">
+					<input type="text" class="inReqNum mui-input-clear" placeholder="请输入采购中心">
 				</div>
 				<div class="mui-input-row">
 					<label>经销店电话：</label>
-					<input type="text" class="inReqNum" placeholder="请输入电话">
+					<input type="text" class="inReqNum mui-input-clear" placeholder="请输入电话">
 				</div>
 				<div class="mui-input-row">
 					<label>商品货号：</label>
-					<input type="text" class="inReqNum" placeholder="请输入商品货号">
+					<input type="text" class="inReqNum mui-input-clear" placeholder="请输入商品货号">
 				</div>
 				<div class="mui-input-row">
 					<label>客户专员：</label>
-					<input type="text" class="inReqNum" placeholder="请输入客户专员">
+					<input type="text" class="inReqNum mui-input-clear" placeholder="请输入客户专员">
 				</div>
 				<div class="mui-input-row">
 					<label>订单状态：</label>
