--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAmend.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAmend.html
@@ -68,7 +68,7 @@
 			}
 			
 			.saveBtn {
-				width: 80%;
+				width: 70%;
 				margin: 20px auto;
 			}
 			
@@ -153,15 +153,7 @@
 			.inputClassAdd label {
 				color:#40ABE9;
 			}
-			
-/*.mui-toast-container {
-			bottom: 10% !important;			
-}
-			*/
-/*.mui-toast-message {
-	background: #FF7F24;
-	color: #000;
-}*/
+			.mui-btn-blue, .mui-btn-primary, input[type=submit] {background-color: #40ABE9;border: none;}
 		</style>
 	</head>
 
