--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAddList.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAddList.html
@@ -69,7 +69,7 @@
 			}
 			
 			.saveBtn {
-			    width: 80%;
+			    width: 70%;
 				margin: 20px auto;
 			}
 			.mui-input-row font {
@@ -145,6 +145,7 @@
 			    top: 10%;
 			    font-size: 20px;
 			}
+			.mui-btn-blue, .mui-btn-primary, input[type=submit] {background-color: #40ABE9;border: none;}
 		</style>
 	</head>
 	<body>
