--- a/src/main/webapp/static/mobile/html/purchaseMagmetHtml/puSearch.html
+++ b/src/main/webapp/static/mobile/html/purchaseMagmetHtml/puSearch.html
@@ -22,11 +22,11 @@
 			<form class="mui-input-group">
 				<div class="mui-input-row">
 					<label>采购单号：</label>
-					<input type="text" class="ordNum" placeholder="请输入采购单号">
+					<input type="text" class="ordNum mui-input-clear" placeholder="请输入采购单号">
 				</div>
 				<div class="mui-input-row">
 					<label>订单编号：</label>
-					<input type="text" class="detaNum" placeholder="请输入订单/备货清单编号">
+					<input type="text" class="detaNum mui-input-clear" placeholder="请输入订单/备货清单编号">
 				</div>
 				<div class="mui-input-row">
 					<label>供应商：</label>
