更新查询条件

--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/staffAdd.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/staffAdd.html
@@ -8,7 +8,7 @@
 		<link href="../../css/app.css" rel="stylesheet" />
 		<style type="text/css">
 			.saveBtn {
-			    width: 80%;
+			    width: 70%;
 				margin: 20px auto;
 			}
 			.pre {
@@ -37,8 +37,7 @@
 				border-bottom: none;
 				border-radius: 0 0 3px 3px;
 				display: none;
-			}
-			
+			}			
 			.soption {
 				display: block;
 				padding: 2px 5px;
@@ -73,12 +72,14 @@
 				font-size: 20px;
 			}
 			.mui-table-view-cell {list-style: none;font-size: 10px;padding: 6px 12px;}
-			.mui-checkbox.mui-left label, .mui-radio.mui-left label {padding: 0;
-    width: 75%;
-    position: relative;
-    left: 25px;}
-			.mui-checkbox.mui-left input[type=checkbox] {    top: -1px;
-    left: 0;}
+			.mui-checkbox.mui-left label, .mui-radio.mui-left label {
+				padding: 0;				
+			    width: 75%;
+			    position: relative;
+			    left: 25px;}
+			.mui-checkbox.mui-left input[type=checkbox] {   
+				top: -1px;
+                left: 0;}
 			.mui-checkbox input[type=checkbox]:before, .mui-radio input[type=radio]:before {font-size: 20px;}
 		</style>
 	</head>
