--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/relevanceHtml/relSech.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/relevanceHtml/relSech.html
@@ -18,7 +18,7 @@
 				<div class="mui-input-row">
 					<label>经销店名称：</label>
 					<div class="pre">
-						<input class="newinput" type="text" placeholder="请选择归属公司">
+						<input class="newinput" type="text" placeholder="请选择经销店">
 						<span class="mui-icon mui-icon-closeempty hideSpan" id="cpySchRelHideSpan"></span>
 						<div class="input_div" style="display: none;">
 							
@@ -29,7 +29,7 @@
 				</div>
 				<div class="mui-input-row">
 					<label>联系电话：</label>
-					<input type="text" class="staRelMobile" id="staRelMobile" placeholder="请输入登录名">
+					<input type="text" class="staRelMobile" id="staRelMobile" placeholder="请输入联系电话">
 				</div>
 			</form>
 		</div>
