--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/relevanceHtml/relAdd.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/relevanceHtml/relAdd.html
@@ -83,7 +83,7 @@
 			<div class="mui-input-row">
 				<label>经销店名称：</label>
 				<div class="pre">
-					<input class="newinput" type="text" placeholder="请选择归属公司">
+					<input class="newinput" type="text" placeholder="请选择经销店">
 					<font>*</font>
 					<span class="mui-icon mui-icon-closeempty staHideSpan" id="cpyAddHideSpan"></span>
 					<div class="input_div" style="display: none;">
