--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/staffList.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/staffList.html
@@ -49,10 +49,10 @@
 				<span class="mui-icon mui-icon-home"></span>
 				<span class="mui-tab-label">返回首页</span>
 			</a>
-			<a class="mui-tab-item app_cf staAddBtn">
+			<!--<a class="mui-tab-item app_cf staAddBtn">
 				<span class="mui-icon mui-icon-plus"></span>
 				<span class="mui-tab-label">用户添加</span>
-			</a>
+			</a>-->
 		</nav>
 		<div class="content mui-content mui-scroll-wrapper" id="refreshContainer">
 			<div class="listBlue mui-scroll">
