--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryList.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryList.html
@@ -40,7 +40,6 @@
 			.mui-content ul li {padding: 0;list-style: none;height: 30px;width:60px;}
  			.mui-input-group>p {height: 30px;line-height: 30px;text-indent: 15px;color: #000;background-color: #374761;color: #fff;font-size: 16px;}
  			.mui-table-view:before {background-color: #FFF;}
- 			#list>div {border-bottom: 1px solid #40ABE9;}
  			.mui-input-group div.mui-input-row {background-color:#fff;}
  			.noneTxt {position: absolute;top: 50%;left: 50%;margin-left: -28px;}
  			.footClass {background-color: #40ABE9;} 
@@ -50,9 +49,9 @@
 			.mui-table-view-chevron .mui-table-view-cell {
 			     padding-right: 0px; 
 			} 
-			.listBlue>div {
+			/*.listBlue>div {
 			     border-bottom: 1px solid #fff; 
-			}
+			}*/
 		</style>
 	</head>
 	<body>
@@ -72,7 +71,7 @@
 			</a>
 		</nav>
 		<div class="content mui-content mui-scroll-wrapper" id="refreshContainer">
-			<div class="inListAdd listBlue mui-scroll">
+			<div class="mui-scroll">
 				<ul class="mui-table-view mui-table-view-chevron" id="list">
                         
                 </ul>
