--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrdSech.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrdSech.html
@@ -37,7 +37,17 @@
 				<div class="mui-input-row">
 					<label>订单状态：</label>
 					<div class="pre">
-						<select class="secStyle" name="" id="input_div_class">
+						<select class="secStyle" name="" id="input_div_orderStatus">
+							<option value=""></option>
+						</select>
+						<input class="savedata" type="hidden" value=''>
+						<div style="clear:both"></div>
+					</div>
+				</div>
+				<div class="mui-input-row">
+					<label>审核状态：</label>
+					<div class="pre">
+						<select class="secStyle" name="" id="input_div_checkStatus">
 							<option value=""></option>
 						</select>
 						<input class="savedata" type="hidden" value=''>
