--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrderList.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrderList.html
@@ -67,6 +67,8 @@
                 </ul>
 			</div>
 		</div>
+		<input type="hidden" name="statu" id="statu"/>
+		<input type="hidden" name="source" id="source"/>
 		<script src="../../../js/component/mui.min.js"></script>	
 		<script src="../../../js/component/zepto.min.js"></script>
 		<script src="../../../js/component/GHutils.js"></script>
