--- a/src/main/webapp/static/mobile/html/management.html
+++ b/src/main/webapp/static/mobile/html/management.html
@@ -16,7 +16,7 @@
 		</header>
 		<div class="mui-content">
 			<div class="mui-card">
-				<ul class="mui-table-view font-color" id="menuMaget">
+				<ul class="mui-table-view app_color40" id="menuMaget">
 
 				</ul>
 			</div>
