--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAddList.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAddList.html
@@ -136,6 +136,7 @@
 			    top: 10%;
 			    font-size: 20px;
 			}
+			#changeTxt{text-align: left;}
 			.mui-btn-blue, .mui-btn-primary, input[type=submit] {background-color: #40ABE9;border: none;}
 		</style>
 	</head>
@@ -147,7 +148,7 @@
 		<div class="mui-content mui-input-group">
 			<div class="mui-input-row">
 				<label>备货方：</label>
-		    	<div id="changeTxt" class="labelri" style="padding: 14px 8px;">
+		    	<div id="changeTxt" class="labelri" style="padding: 14px 2px;">
 			        <input checked type="radio" name="apply" />
 		        	采购中心备货
 			        <input id="yes" type="radio" name="apply" />
