--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrdDetail.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrdDetail.html
@@ -14,7 +14,7 @@
 			.mui-table-view-cell {
 				border-bottom: 1px solid #efeff4;
 			}
-			.mui-content div.mui-row li {
+			.mui-row li {
 				padding: 5px;
 				list-style: none;
 				height: 30px;
@@ -86,7 +86,7 @@
 			</div>
 			<div class="mui-input-row">
 				<label>备注：</label>
-				<textarea id="staPoRemark" name="" rows="" cols="" disabled></textarea>
+				<textarea class="app_color40" id="staPoRemark" name="" rows="" cols="" disabled></textarea>
 			</div>
 			<!--<div class="mui-input-row">
 				<div class="labelLf">进展信息：</div>
@@ -126,7 +126,7 @@
 					
 				</ul>
 			</div>
-			<div class="mui-input-row">
+			<div class="mui-input-row app_bline">
 				<div class="labelLf">付款约定：</div>
 				<div class="mui-input-row">
 					<label>付款时间：</label>
@@ -137,6 +137,63 @@
 					<input type="text" class="mui-input-clear" id="staPayMoney" disabled>
 				</div>
 			</div>
+			<div class="app_cred3">
+				<div class="mui-row app_bline">
+					<div class="mui-input-row">
+						<label>甲方(经销店):</label>
+						<input type="text" class="mui-input-clear" id="firstPart" disabled>
+					</div>
+					<div class="mui-input-row">
+						<label>负责人:</label>
+						<input type="text" class="mui-input-clear" id="firstPrincipal" disabled>
+					</div>
+					<div class="mui-input-row">
+						<label>联系电话:</label>
+						<input type="text" class="mui-input-clear" id="firstMobile" disabled>
+					</div>
+				</div>
+				<div class="mui-row app_bline">
+					<div class="mui-input-row">
+						<label>乙方(供应商):</label>
+						<input type="text" class="mui-input-clear" id="partB" disabled>
+					</div>
+					<div class="mui-input-row">
+						<label>负责人:</label>
+						<input type="text" class="mui-input-clear" id="partBPrincipal" disabled>
+					</div>
+					<div class="mui-input-row">
+						<label>联系电话:</label>
+						<input type="text" class="mui-input-clear" id="partBMobile" disabled>
+					</div>
+				</div>
+				<div class="mui-row app_bline">
+					<div class="mui-input-row">
+						<label>丙方(万户通):</label>
+						<input type="text" class="mui-input-clear" value="万户通总公司" disabled>
+					</div>
+					<div class="mui-input-row">
+						<label>负责人:</label>
+						<input type="text" class="mui-input-clear" id="partCPrincipal" disabled>
+					</div>
+					<div class="mui-input-row">
+						<label>联系电话:</label>
+						<input type="text" class="mui-input-clear" id="partCMobile" disabled>
+					</div>
+				</div>
+				<div class="app_p15">
+					<ul>
+						<li>注：</li>
+						<li>一、甲方是万户通平台的运营商，乙方是箱包厂商，丙方是采购商。丙方委托甲方进行商品采购，并通过甲方向乙方支付货款。三方在友好协商、平等互利的基础上，就甲方提供商品采购服务事宜形成本订单。</li>
+						<li>二、自丙方下单完成起，至丙方支付完毕本订单所有费用时止。</li>
+						<li>三、乙、丙双方确定商品质量标准。丙方负责收货、验货，乙方负责提供质量达标的商品，如果商品达不到丙方要求，丙方有权要求乙方退换货。甲方不承担任何商品质量责任。</li>
+						<li>四、商品交付丙方前，丙方须支付全部货款。如果丙方不能及时付款，甲方有权利拒绝交付商品。</li>
+						<li>五、本订单商品价格为未含税价，如果丙方需要发票，乙方有义务提供正规发票，税点由丙方承担。</li>
+						<li>六、乙方保证其提供的商品具有完整的所有权，并达到国家相关质量标准要求。因乙方商品问题（包括但不限于质量问题、版权问题、款式不符、数量不符等）给甲方及（或）丙方或其他方造成损失的，须由乙方赔偿全部损失。</li>
+						<li>七、本订单在万户通平台经甲、乙、丙三方线上确认后生效，与纸质盖章订单具有同等的法律效力。在系统出现故障时，甲、乙、丙三方也可采用纸质订单并签字或盖章后生效。</li>
+					</ul>
+				</div>
+			</div>
+			
 		</div>
 		<div class="clear"></div>
 		<script src="../../../js/component/mui.min.js"></script>	
