--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAddList.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAddList.html
@@ -147,10 +147,10 @@
 		<div class="mui-content mui-input-group">
 			<div class="mui-input-row">
 				<label>备货方：</label>
-		    	<div id="changeTxt" class="labelri" style="padding: 14px 8px;">
+		    	<div id="changeTxt" class="labelri" style="padding: 14px 14px 14px 0;text-align: left;">
 		        	采购中心备货
 		        	<input checked type="radio" name="apply" />
-	                厂商备货
+	                                厂商备货
 	                <input id="yes" type="radio" name="apply" />
 		    	</div>
 		    </div>
