--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/relevanceHtml/relSech.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/relevanceHtml/relSech.html
@@ -29,7 +29,7 @@
 				</div>
 				<div class="mui-input-row">
 					<label>联系电话：</label>
-					<input type="text" class="staRelMobile" id="staRelMobile" placeholder="请输入联系电话">
+					<input type="text" class="mui-input-clear" id="staRelMobile" placeholder="请输入联系电话">
 				</div>
 			</form>
 		</div>
