--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/relevanceHtml/relSech.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/relevanceHtml/relSech.html
@@ -23,7 +23,7 @@
 						<div class="input_div" style="display: none;">
 							
 						</div>
-						<input class="savedata" type="hidden" value=''>
+						<input class="savedata" type="hidden" value='' id="sd">
 						<div style="clear:both"></div>
 					</div>
 				</div>
